# FiterWord

./: .gitignore  CMakeLists.txt  FilterWord.sln
Data/: test_case.txt
FilterWord/: FilterWord.cpp  FilterWord.vcxproj  FilterWord.vcxproj.filters  IniFile.cpp  conf.ini  sensitive.txt  words_bak.txt
Generate/: Generate.bat  Generate_VS2017_64.bat
Src/: CMakeLists.txt
Src/FilterWord/: CMakeLists.txt  FilterWord.cpp  IniFile.cpp
